# community-integrations

./: README.md
actions/: README.md
scripts/: README.md  Taskfile.yml  pyproject.toml
scripts/cloudzero/: README.md  get_cloudzero_billing_costs.py
scripts/convert_backstage_yml_to_opslevel_yml/: convert_backstage_yml_to_opslevel_yml.js  example-input.yml
scripts/convert_domains_and_systems_using_opslevel_cli/: opslevel_cli_commands.md
scripts/convert_systems_to_services/: convert_systems_to_services copy 2.py  convert_systems_to_services copy.py  convert_systems_to_services.py  convert_systems_to_services_with_opslevel_cli copy.py  convert_systems_to_services_with_opslevel_cli.py
scripts/convert_tags_to_custom_properties/: README.md  convert_tags_to_custom_properties.py
scripts/convert_teams_to_systems/: README.md  migrate-teams-to-systems.py
scripts/convert_user_roles/: README.md  convert_user_to_team_member_roles.py
scripts/copy_componentType_custom_properties/: README.md  copy_componentType_custom_properties.py
scripts/create_campaign_jira_issues/: .gitignore  README.md  create_campaign_jira_issues.py  requirements.txt
scripts/create_relationships_based_on_union_of_tags/: README.md  create_relationships_from_union_of_tags.py  plan.md  requirements.txt
scripts/delete_all_infrastructure_resources/: README.md  delete_all_infrastructure_resources.sh
scripts/delete_all_services/: README.md  delete_services.sh
scripts/dependabot/: README.md  dependabot_alerts.py
scripts/export_all_opslevel_yml/: README.md  opslevel_yml_export_for_all_services.py
scripts/export_services_as_csv/: README.md  export_services_as_csv.py
scripts/export_users_and_teams/: README.md  export-teams-users.py
(+81 files in other folders)
