[project]
name = "OpsLevel-community-integrations-scripts"
version = "0.0.1"
description = "Custom Python scripts written by the OpsLevel community"
dynamic = ["optional-dependencies"]
requires-python = ">=3.11"

[project.urls]
Source = "https://github.com/OpsLevel/community-integrations"
Documentation = "https://github.com/OpsLevel/community-integrations/tree/main/scripts#readme"

[tool.hatch.metadata.hooks.requirements_txt.optional-dependencies]
create_campaign_jira_issues_dependencies = [
  "create_campaign_jira_issues/requirements.txt",
]

[tool.hatch.envs.default]
description = "Linting, formatting, and testing files"
dependencies = [
  "black~=23.10",
  "pytest~=7.3",
  "ruff~=0.1.3",
]

[tool.hatch.envs.default.scripts]
lint = [
  "black --check {env:GITHUB_ACTION_PATH:{root}}",
  "ruff {env:GITHUB_ACTION_PATH:{root}}",
]
lint-fix = [
  "black {env:GITHUB_ACTION_PATH:{root}}",
  "ruff --fix {env:GITHUB_ACTION_PATH:{root}}",
]
test = [
  "pytest --capture=sys {env:GITHUB_ACTION_PATH:{root}}",
]

[tool.hatch.envs.create_campaign_jira_issues]
description = "Creates JIRA issues tied to a campaign"
template = "create_campaign_jira_issues"
features = ["create_campaign_jira_issues_dependencies"]

[tool.hatch.envs.create_campaign_jira_issues.scripts]
run = [
  "python create_campaign_jira_issues/create_campaign_jira_issues.py",
]
debug = [
  "python -m pdb create_campaign_jira_issues/create_campaign_jira_issues.py",
]

[tool.ruff]
ignore = ["E501"]
src = [
  "{env:GITHUB_ACTION_PATH:{root}}",
]

[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"
